--- a/LVL32/homework/website.html
+++ b/LVL32/homework/website.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo">GeeksforGeeks</div>
-    <nav>
+    <nav class="newnav">
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Services</a>
