--- a/LVL39/homework/homework.html
+++ b/LVL39/homework/homework.html
@@ -35,7 +35,7 @@
             <input type="email" placeholder="Email">
             <p>Get Discount</p>
             <button>Here</button>
-        </div><br><br><br>
+        </div><br><br><br><br>
         <hr>
         <h3 id="project">Projects:</h3>
         <div class="project">
