--- a/LVL41/homework/index.html
+++ b/LVL41/homework/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
 
 <head>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-    @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap');
-  </style>
 
   <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
@@ -24,7 +20,7 @@
 
   <div class="maindiv">
     <div>
-      <img src="/images/image-product-desktop.jpg" alt="">
+      <img src="/LVL41/homework/images/image-product-desktop.jpg" alt="">
     </div>
 
     <div class="texts">
@@ -41,7 +37,7 @@
       </div>
 
       <button>
-        <img src="/images/icon-cart.svg" >
+        <img src="/LVL41/homework/images/icon-cart.svg">
         Add to cart
       </button>
     </div>
